--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Kings Meal | Premium Restaurant</title>
+
+
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+
+
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -48,11 +54,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script async src="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.js"/>
-  <div hidden id="snipcart" data-api-key="ZmRhMDA3NWMtNWU3ZS00MmExLThjNzMtZjY5N2MxZGRmZTViNjM4MTYyMjMwMTg1NjQxOTM4">
 
-
-
+  <script async src="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.js"></script>
+  <div hidden id="snipcart" data-api-key="ZmRhMDA3NWMtNWU3ZS00MmExLThjNzMtZjY5N2MxZGRmZTViNjM4MTYyMjMwMTg1NjQxOTM4"/>
 </body>
 
 </html>
