fixed home responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
     -->
 
   <script async src="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.js"></script>
-  <div hidden id="snipcart" data-api-key="ZmRhMDA3NWMtNWU3ZS00MmExLThjNzMtZjY5N2MxZGRmZTViNjM4MTYyMjMwMTg1NjQxOTM4"/>
+  <div hidden id="snipcart" data-api-key="ZmRhMDA3NWMtNWU3ZS00MmExLThjNzMtZjY5N2MxZGRmZTViNjM4MTYyMjMwMTg1NjQxOTM4" data-config-modal-style="side" currency="eur" />
 </body>
 
 </html>
